[package]
name = "reladen-desktop"
version = "0.1.0"
authors = ["Reladen Team"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1", features = [ "dialog-save", "dialog-open", "path-all", "fs-write-file", "fs-read-file"] }
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }
